--- a/PPTT/Pages/Shared/_Layout.cshtml
+++ b/PPTT/Pages/Shared/_Layout.cshtml
@@ -10,7 +10,8 @@
 </head>
 @{
     var currentPage = ViewContext.RouteData.Values["Page"]?.ToString();
-    var pages = new List<string> { "/Index", "/Vistas/IngresoPersonal", "/PT/Create" };
+    var pages = new List<string> { "/Index", "/Vistas/IngresoPersonal", "/PT/Create", "/Vistas/OlvideContraseña",
+    "/Vistas/IngresoPrimeraVez"};
 }
 <body>
     <header>
