--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -349,7 +349,8 @@
         </table>
     </div>
     <div>
-        <a asp-page="./Index"class="btn-action">Back to List</a>
+        <<a href="javascript:window.history.back();" class="btn-action">Volver a la Lista</a>
+
     </div>
     <script src="Motivo
 CANCELADOhttps://code.jquery.com/jquery-3.6.0.min.js"></script>
