--- a/PPTT/Pages/PT/FinalizadosAdmin.cshtml
+++ b/PPTT/Pages/PT/FinalizadosAdmin.cshtml
@@ -6,109 +6,112 @@
 }
 
 <body>
-    <table class="table" id="tabla">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Orden_Fk)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Fecha_Subida)
-                </th>
-                <th>
-                    <span>Fecha de Finalización</span>
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Grado_Fk)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Apellido_Solicitante)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Organismo_Fk)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].RTI_Solicitante)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Numero_Oficina_PT)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Correo)
-                </th>
+<table class="table" id="tabla">
+    <thead>
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Orden_Fk)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Fecha_Subida)
+            </th>
+            <th>
+                <span>Fecha de Finalización</span>
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Grado_Fk)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Apellido_Solicitante)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Organismo_Fk)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].RTI_Solicitante)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Numero_Oficina_PT)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Correo)
+            </th>
                 <th>
                     @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Division_Fk)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Tarea_Fk)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)
-                </th>
-                <th>
-                    Detalle/Estado
-                </th>
-            </tr>
-        </thead>
-        <tbody>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Tarea_Fk)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].Observacion)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PedidoTrabajo[0].ID_Estado_Fk)
+            </th>          
+            <th>
+                Detalle/Estado
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+            @{
+                var divisionUsuario = HttpContext.Session.GetInt32("Division");
+            }
+
             @foreach (var item in Model.PedidoTrabajo)
             {
-                if (item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006)
+                if (item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006 && item.ID_Division_Fk == divisionUsuario)
                 {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ID_Orden_Fk)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Fecha_Subida)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Fecha_Estimada_Fin)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Grado.Descripcion_Grado)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Apellido_Solicitante)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Organismo.Descripcion_organismo)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.RTI_Solicitante)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Numero_Oficina_PT)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Correo)
-                        </td>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ID_Orden_Fk)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fecha_Subida)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fecha_Estimada_Fin)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Grado.Descripcion_Grado)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Apellido_Solicitante)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Organismo.Descripcion_organismo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RTI_Solicitante)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Numero_Oficina_PT)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Correo)
+                </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.ID_Division_Fk)
                         </td>
-                        <td>
-                            @Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ?
-                                     item.Tarea.Descripcion_Tarea.Substring(0) :
-                                     item.Tarea.Descripcion_Tarea)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Observacion)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)
-                        </td>
-                        <td>
-                            <a asp-page="./Details" class="btn-action" asp-route-id="@item.ID_Orden_Trabajo_Pk">Editar Estado</a>
-                        </td>
-                    </tr>
-                }
-            }
-        </tbody>
-    </table>
-<a asp-page="./Index" class="btn-action">Volver a Index de trabajos</a>
+                <td>
+                    @Html.Raw(item.Tarea.Descripcion_Tarea.Length > 3 ?
+                             item.Tarea.Descripcion_Tarea.Substring(0) :
+                             item.Tarea.Descripcion_Tarea)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Observacion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Estado.Descripcion_Estado)
+                </td>              
+                <td>
+                    <a asp-page="./Details" class="btn-action" asp-route-id="@item.ID_Orden_Trabajo_Pk">Editar Estado</a>
+                </td>
+            </tr>}
+        }
+    </tbody>
+</table>
+<a asp-page="./IndexAdmin" class="btn-action">Volver a Index de trabajos</a>
 <button id="btnExportar">Exportar Excel</button>
 </body>
 <footer>
