--- a/PPTT/Pages/Administradores/Index.cshtml
+++ b/PPTT/Pages/Administradores/Index.cshtml
@@ -63,15 +63,20 @@
                     {
                         @:No se le asignó una división
                     }
-                    else if (item.ID_Division_Fk == 1)
-                    {
-                        @:División Comunicaciones e Informática
-                    }
                     else
                     {
-                        @:División Mantenimiento de Instalaciones
+                        var division = Model.Divisiones.FirstOrDefault(d => d.ID_Division_Pk == item.ID_Division_Fk);
+                        if (division != null)
+                        {
+                            @division.Descripcion_Division
+                        }
+                        else
+                        {
+                            @:División desconocida
+                        }
                     }
                 </td>
+
                 <td>
                     @if (item.ID_Servicio_Fk == null)
                     {
