--- a/PPTT/Pages/PT/FinalizadosAdmin.cshtml
+++ b/PPTT/Pages/PT/FinalizadosAdmin.cshtml
@@ -60,7 +60,7 @@
 
             @foreach (var item in Model.PedidoTrabajo)
             {
-                if (item.ID_Estado_Fk != 1004 && item.ID_Estado_Fk != 1006 && item.ID_Division_Fk == divisionUsuario)
+                if ((item.ID_Estado_Fk == 1004 || item.ID_Estado_Fk == 1006) && item.ID_Division_Fk == divisionUsuario)
                 {
             <tr>
                 <td>
