--- a/PPTT/Pages/PT/Create.cshtml
+++ b/PPTT/Pages/PT/Create.cshtml
@@ -133,9 +133,11 @@
                 <span asp-validation-for="PedidoTrabajo.Observacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" class="submit" value="Crear" class="btn btn-primary" />
+                <input type="submit" class="submit" value="Crear"" />
             </div>
         </form>
+        <a href="/" class="btn-action">Volver al Menu</a>
+
     </div>
 </div>
 @section Scripts {
