--- a/PPTT/Pages/PT/Create.cshtml
+++ b/PPTT/Pages/PT/Create.cshtml
@@ -133,7 +133,7 @@
                 <span asp-validation-for="PedidoTrabajo.Observacion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" class="submit" value="Crear"" />
+                <input type="submit" class="submit" value="Crear">
             </div>
         </form>
         <a href="/" class="btn-action">Volver al Menu</a>
