--- a/PPTT/Pages/Vistas/IndexLogueado.cshtml
+++ b/PPTT/Pages/Vistas/IndexLogueado.cshtml
@@ -5,11 +5,11 @@
 }
 <body>    
     <div class="card-container">
-        <a asp-page="/PT/Index"> <div class="card">Pedidos de Trabajo</div></a>
-        <a asp-page="/Administradores/Create"><div class="card">Alta de Usuario</div></a>
+        <a asp-page="/PT/Index"> <div class="card">Lista Pedidos de Trabajo</div></a>
         <a asp-page="/Administradores/Index"><div class="card">Listado de Usuarios</div></a>
-        <div class="card">Baja de Usuario</div>
-        <div class="card">Pedidos de Trabajo</div>
+        <a asp-page="/Administradores/Create"><div class="card">Alta de Usuario</div></a>
+@*         <div class="card">Baja de Usuario</div>
+        <div class="card">Pedidos de Trabajo</div> *@
     </div>
 </body>
 <footer>
