--- a/PPTT/Pages/Administradores/Create.cshtml
+++ b/PPTT/Pages/Administradores/Create.cshtml
@@ -27,7 +27,7 @@
                 <div class="row-inputs">
                     <div class="form-group">
                         <label asp-for="Admin.DNI" class="control-label"></label>
-                            <input required asp-for="Admin.DNI" class="form-control" placeholder="Número de Documento" min="1000000" max="99999999"  title="Debe ingresar al menos 8 dígitos." />
+                            <input required asp-for="Admin.DNI" class="form-control" placeholder="Número de Documento" value="" min="1000000" max="99999999"  title="Debe ingresar al menos 8 dígitos." />
                         <span asp-validation-for="Admin.DNI" class="text-danger"></span>
                     </div>
                     <div class="form-group">
