--- a/PPTT/Pages/PT/IndexAdmin.cshtml
+++ b/PPTT/Pages/PT/IndexAdmin.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PPTT.Pages.Administradores.IndexPPTT
+@model PPTT.Pages.Administradores.IndexAdminPPTT
 
 @{
     ViewData["Title"] = "Pedidos de trabajo";
