--- a/PPTT/Pages/Vistas/MenuLog.cshtml
+++ b/PPTT/Pages/Vistas/MenuLog.cshtml
@@ -62,10 +62,6 @@
 </style>
 <form method="get">
     <a href="/PT/Create" class="submit">Subir Peticion de Trabajo</a>
-    <a href="/Vistas/VerTrabajoEmpleado" class="submit">Ver Trabajos Asignado Para Ti</a>
+    <a href="/PT/VerTrabajo" class="submit">Ver Trabajos Asignado Para Ti</a>
 </form>
-<div class="centered-button">
-    <form method="post" asp-page-handler="cerrar">
-        <input type="submit" value="Cerrar Sesion" class="submit" />
-    </form>
-</div>
+
