--- a/PPTT/Pages/PT/Details.cshtml
+++ b/PPTT/Pages/PT/Details.cshtml
@@ -349,7 +349,7 @@
         </table>
     </div>
     <div>
-        <<a href="javascript:window.history.back();" class="btn-action">Volver a la Lista</a>
+        <a href="javascript:window.history.back();" class="btn-action">Volver a la Lista</a>
 
     </div>
     <script src="Motivo
